--- a/test_dir/includes/head.html
+++ b/test_dir/includes/head.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html>
-
 <head>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
@@ -8,12 +5,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/xt256.min.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+
+    <title>{{.Title}}</title>
 </head>
-
-<body>
-    {{template "header" .Site}}
-
-    {{template "content" .}}
-
-    {{template "footer" .Site}}
-</body>
