Site is now generated!! Exciting

--- a/test_dir/includes/footer.html
+++ b/test_dir/includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <span class="nowrap">
-        Created by {{.Author}}
+        Created by {{.Author}}, {{.GenerationTime.Year}}
         <nav>
             {{range .FooterLinks}}
             <a href="{{.Target.String}}">{{.Text}}</a>
