--- a/test_dir/includes/head.html
+++ b/test_dir/includes/head.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/xt256.min.css">
