--- a/test_dir/includes/head.html
+++ b/test_dir/includes/head.html
@@ -5,6 +5,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/xt256.min.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <meta name="robots" content="noindex,nofollow">
 
     <title>{{.Title}}</title>
 </head>
