Posts are now on front page

--- a/test_dir/layouts/archive.html
+++ b/test_dir/layouts/archive.html
@@ -12,7 +12,7 @@
             <h1 id={{.Year}}>{{.Year}}</h1>
             <ul>
             {{range .Posts}}
-                <li><a href={{.Name}}>{{.Title}}</a></li>
+                <li><a href="{{.Name}}.html">{{.Title}}</a></li>
             {{end}}
             </ul>
         {{end}}
