--- a/test_dir/layouts/tags.html
+++ b/test_dir/layouts/tags.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-{{template "head.html" .Site}}
+{{template "head.html" .}}
 
 <body>
     {{template "header.html" .Site}}
